added shellsheck for bash

--- a/.dbwebb-validate.config
+++ b/.dbwebb-validate.config
@@ -11,7 +11,7 @@ DISABLE_PHP=true
 DISABLE_PHPMD=true
 DISABLE_PHPCS=true
 DISABLE_CHECKBASH=
-DISABLE_CHECKSH=true
+DISABLE_CHECKSH=
 DISABLE_YAML=true
 DISABLE_FILE_BOM=
 DISABLE_FILE_CRLF=
