started on dbwebb gui

--- a/.dbwebb-validate.config
+++ b/.dbwebb-validate.config
@@ -8,7 +8,7 @@ DISABLE_JSCS=true
 DISABLE_JSONLINT=
 DISABLE_PYLINT=true
 DISABLE_PHP=true
-DISABLE_PHPMD=true
+#DISABLE_PHPMD=true
 DISABLE_PHPCS=true
 DISABLE_CHECKBASH=
 DISABLE_CHECKSH=true
